--- a/PuntoVenta/package.json
+++ b/PuntoVenta/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.15",
     "expo-linear-gradient": "^12.1.2",
